@@ -1,3 +1,8 @@
+2017-12-02  Michael Scholz  <mi-scholz@users.sourceforge.net>
+
+	* examples/site-lib/marks.fs (marks->string):  port-puts
+	requires an output io object.
+
 2017-12-01  Michael Scholz  <mi-scholz@users.sourceforge.net>
 
 	* examples/site-lib/examp.fs: Replace several undefs with
